Actually fixed url bar being too wide on mobile

--- a/website/src/global.sass
+++ b/website/src/global.sass
@@ -35,17 +35,18 @@ body
     flex-direction: column
     justify-content: center
     align-items: center
-    .url input
+    .url
         max-width: 100%
-        user-select: none
-        // background-color: rgba(#000000, 0.1)
-        background-color: rgba(#000000, 0)
-        border: 0px
-        border-radius: 5px
-        padding: 16px
-        width: 500px
-        max-width: 100%
-        box-sizing: border-box
+        input
+            user-select: none
+            // background-color: rgba(#000000, 0.1)
+            background-color: rgba(#000000, 0)
+            border: 0px
+            border-radius: 5px
+            padding: 16px
+            width: 500px
+            max-width: 100%
+            box-sizing: border-box
     .middle-container
         position: relative
         transition: all $transition-28
